@@ -4,6 +4,8 @@ CHANGES.txt - 2009-02-04
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler now supports JobRetryInterval values less than 10
+	  seconds.
 	- Updated the Spanish localization (STR #3090)
 	- The scheduler did not redo Bonjour/DNS-SD registrations when updating
 	  them failed.
